--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ Flask-DebugToolbar==0.10.1
 Flask-RESTful==0.3.7
 Flask-WTF==0.14.2
 lapps==0.0.2
-git+https://github.com/clamsproject/clams-python-sdk.git@shot_detect
+git+https://github.com/clamsproject/clams-python-sdk.git@develop
