--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-Flask==1.0.2
-Flask-DebugToolbar==0.10.1
-Flask-RESTful==0.3.7
-Flask-WTF==0.14.2
 lapps==0.0.2
-git+https://github.com/clamsproject/clams-python-sdk.git@9f4af19
-
+clams-python==0.4.4
+concatrim==1.0.3
