updated to sdk 1.0.9

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,11 @@
+.git/
+.github/
+.gitignore
+.dockerignore
 Dockerfile
-.dockerignore*
-.git*
-.idea
-__pycache__
+Containerfile
+bin/
+build/
+*~
+**/*.pyc
+**/__pyche__
