--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # linux
+.*.sw?
 *~
 .directory # KDE directory preferences
 .Trash-* # Linux trash folder which might appear on any partition or disk
@@ -42,7 +43,6 @@ gen
 *.db
 *.sqlite3
 
-
 # java
 *.class
 .mtj.tmp/ # Mobile Tools for Java (J2ME)
@@ -52,18 +52,112 @@ target/ # Package Files #
 *.ear
 hs_err_pid* # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 
-# python 
-**/*.pyc
-**/__pycache__
+# python byte-compiled / optimized / dll files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# shared folders
-dropbox_shared*/
-github_shared*/
-gdrive_shared*/
+# C extensions
+*.so
 
-# external references
-\!rel_*/
-\!ref_*/
+# python Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# python Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# python Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Virtual Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
 
 # ctag generated file
 tags
